--- a/Java Middleware/HelloWorld/src/main/resources/application.properties
+++ b/Java Middleware/HelloWorld/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-DB_URL = jdbc:mysql://localhost:3306/gideon?useSSL=false
-USER = root
-PASS = admin
-server.port= 8080
+DB_URL = jdbc:mysql://gideondb.cebb7aomhqwq.us-east-1.rds.amazonaws.com:3306/gideondb
+USER = masteruser
+PASS = gideonFrisco!
+server.port= 5000
