--- a/Java Middleware/.recommenders/caches/identified-project-coordinates.json
+++ b/Java Middleware/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-[[{"location":"C:\\Program Files\\Java\\jre1.8.0_151","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"]]
+[[{"location":"C:\\Users\\QLOWORKSTATION5\\Documents\\GitHub\\GideonStudentApp\\Java Middleware\\HelloWorld","type":"PROJECT","hints":{"PROJECT_NAME":"HelloWorld"}},"com.ansh.maven:HelloWorld:0.0.1"]]
